--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ark-nano-wallet",
+  "name": "ripa-nano-wallet",
   "version": "1.0.4",
-  "description": "Ark Nano Wallet",
-  "homepage": "https://github.com/ArkEcosystem/ark-nano-wallet",
-  "bugs": "https://github.com/ArkEcosystem/ark-nano-wallet/issues",
+  "description": "Ripa Nano Wallet",
+  "homepage": "https://github.com/RipaEx/ripa-lite-wallet",
+  "bugs": "https://github.com/RipaEx/ripa-lite-wallet/issues",
   "scripts": {
     "start": "electron app",
     "dist": "npm run dist:macos && npm run dist:linux && npm run dist:win32 && npm run dist:win64",
@@ -13,31 +13,36 @@
     "dist:linux": "build --linux"
   },
   "author": {
-    "name": "Guillaume Verbal",
-    "email": "doweig@ark.io",
-    "url": "https://github.com/doweig"
+    "name": "Giovanni Silvestri",
+    "email": "gsit80@gmail.com",
+    "url": "https://github.com/gsilvestri"
   },
   "contributors": [
     {
       "name": "Ricardo Ferro",
       "email": "ricardo@lisk.io",
       "url": "https://github.com/rferro"
+    },
+    {
+      "name": "Guillaume Verbal",
+      "email": "doweig@ark.io",
+      "url": "https://github.com/doweig"        
     }
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArkEcosystem/ark-nano-wallet"
+    "url": "https://github.com/RipaEx/ripa-lite-wallet"
   },
   "devDependencies": {
     "electron": "^1.4.15",
     "electron-builder": "^12.3.1"
   },
   "build": {
-    "appId": "io.ark.nano.wallet",
+    "appId": "io.ripa.nano.wallet",
     "mac": {
       "category": "finance"
     },
-    "productName": "Ark Nano",
+    "productName": "Ripa Nano",
     "win": {
       "target": "nsis"
     }
